--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
@@ -21,16 +22,19 @@
     "eslint-plugin-prettier": "^4.0.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "immer": "^9.0.6",
     "json-server": "^0.17.0",
     "prettier": "^2.4.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-modalize": "^2.0.12",
     "react-native-safe-area-context": "3.3.2",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
